--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "ioredis": "^5.3.2",
         "nodemon": "^2.0.22",
         "openai": "^3.2.1",
         "puppeteer": "^19.4.0"
